# diffgen

./: .gitignore  README.md  pyproject.toml  requirements.txt
diffgen/: config.py  git.py  llm.py  main.py
