[project]
name = "diffgen"
version = "0.1.0"
description = "Generate commit messages and PR descriptions using LLM"
authors = [{ name = "paulopacitti" }]
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = ["litellm==1.61.11", "typer==0.12.5"]

[project.urls]
"Homepage" = "https://github.com/paulopacitti/diffgen"

[project.scripts]
diffgen = "diffgen.main:app"
